--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "nextjs",
     "neynar"
   ],
+  "files": [
+    "src/**/*",
+    "dist/*",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsup",
     "check:lint": "eslint .",
@@ -45,6 +50,7 @@
     "prettier": "3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tsup": "^7.2.0",
     "typescript": "^5.2.2",
     "viem": "^1.12.1"
   },
@@ -52,7 +58,8 @@
     "entry": {
       "index": "src/client/index.ts",
       "server": "src/server/index.ts"
-    }
+    },
+    "dts": true
   },
   "lint-staged": {
     "*.{ts,tsx}": [
