build: set up commitlint

--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "version": "0.0.1",
   "author": "Alex Grover <hello@alexgrover.me> (https://alexgrover.me)",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alex-grover/neynar-next.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alex-grover/neynar-next/issues"
+  },
+  "homepage": "https://github.com/alex-grover/neynar-next#readme",
   "keywords": [
     "farcaster",
     "nextjs",
@@ -15,13 +23,15 @@
     "README.md"
   ],
   "scripts": {
+    "clean": "rm -rf dist",
     "build": "tsup",
     "check:lint": "eslint .",
     "fix:lint": "eslint . --fix",
     "check:format": "prettier --check --cache .",
     "fix:format": "prettier --write --cache .",
     "check:types": "tsc",
-    "prepare": "husky install"
+    "cz": "cz",
+    "prepare": "is-ci || husky install"
   },
   "peerDependencies": {
     "next": "^13",
@@ -32,12 +42,15 @@
   "devDependencies": {
     "@alex-grover/eslint-config": "^0.0.5",
     "@alex-grover/prettier-config": "0.0.2",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@tsconfig/next": "^2.0.0",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.2",
     "eslint-config-prettier": "^9.0.0",
@@ -45,6 +58,7 @@
     "eslint-plugin-css-modules": "^2.11.4",
     "eslint-plugin-import": "^2.28.1",
     "husky": "^8.0.0",
+    "is-ci": "^3.0.1",
     "lint-staged": "^14.0.1",
     "next": "^13.5.2",
     "prettier": "3.0.3",
@@ -77,5 +91,15 @@
       "@next/next/no-html-link-for-pages": "off"
     }
   },
-  "prettier": "@alex-grover/prettier-config"
+  "prettier": "@alex-grover/prettier-config",
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  }
 }
