--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
           package-name: neynar-next
           bump-minor-pre-major: true
           bump-patch-for-minor-pre-major: true
+          release-as: 0.0.1
       - uses: actions/checkout@v3
         if: ${{ steps.release.outputs.release_created }}
       - uses: actions/setup-node@v3
