--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "neynar"
   ],
   "files": [
-    "src/**/*",
-    "dist/*",
-    "README.md"
+    "dist"
   ],
+  "main": "./dist/index.js",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "tsup",
