--- a/package.json
+++ b/package.json
@@ -93,6 +93,9 @@
       "@next/next/no-html-link-for-pages": "off"
     }
   },
+  "eslintIgnore": [
+    "dist"
+  ],
   "prettier": "@alex-grover/prettier-config",
   "config": {
     "commitizen": {
