--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prepare": "is-ci || husky install"
   },
   "peerDependencies": {
-    "next": "^13",
+    "next": "^13 || ^14",
     "react": "^18",
     "react-dom": "^18",
     "viem": "^1"
@@ -107,5 +107,8 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
+  },
+  "dependencies": {
+    "neynar-next": "^0.3.2"
   }
 }
